# meta-ads-analysis

./: .gitignore  README.md  docker-compose.yml
.claude/: settings.local.json
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: ads.py  analysis.py  monitoring.py  patterns.py  router.py  scoring.py
backend/app/core/: claude.py  database.py
backend/app/models/: __init__.py  ad.py
backend/app/schemas/: __init__.py  ad.py  analysis.py
backend/app/services/: analyzer.py  collector.py  pattern_analyzer.py  scoring.py  screenshot.py  storage.py
backend/app/workers/: __init__.py  analyze_task.py  celery_app.py  collect_task.py
docs/: .bkit-memory.json  .pdca-status.json  META_AD_ANALYZER_SPEC.md
docs/.pdca-snapshots/: snapshot-1770632788841.json  snapshot-1770634845264.json  snapshot-1770636437649.json  snapshot-1770638746811.json  snapshot-1770644486785.json  snapshot-1770650574992.json
docs/01-plan/features/: creative-intelligence-v2.plan.md  meta-ad-analyzer.plan.md
docs/02-design/features/: meta-ad-analyzer.design.md
docs/03-analysis/: creative-intelligence-v2.gap-analysis.md  creative-intelligence-v2.iteration-report.md  meta-ad-analyzer.analysis.md
docs/04-report/: creative-intelligence-v2.report.md  meta-ad-analyzer.report.md
frontend/: .env.example  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: layout.tsx  (+1 more)
(+28 files in other folders)
