[tool.poetry]
name = "meta-ads-backend"
version = "0.1.0"
description = "Meta Ad Analyzer Backend API"
authors = ["Development Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
asyncpg = "^0.29.0"
alembic = "^1.13.1"
celery = {extras = ["redis"], version = "^5.3.6"}
redis = "^5.0.1"
boto3 = "^1.34.0"
httpx = "^0.26.0"
anthropic = "^0.18.0"
playwright = "^1.41.0"
python-dotenv = "^1.0.0"
pydantic-settings = "^2.1.0"
pydantic = "^2.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
black = "^24.1.0"
isort = "^5.13.2"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
